--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <form action="#">
             <div class="itemform">
                 <label for="nick">Ingresa Tu nick</label>
+                <input type="text" name="nick" value="@" id="nicka" readonly>
                 <input type="text" name="nick" id="nick">
             </div>
             <div class="itemform">
