--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <input type="text" name="nick" id="nick">
             </div>
             <div class="itemform">
+                <label for="nick">Ingresa Tu Correo</label>
+                <input type="email" name="email" id="email">
+            </div>
+            <div class="itemform">
                 <label for="tamano">tamaño del juego</label>
                 <select name="tamano" id="tamano">
                     <option value="">-- Porfavor Elige un tamaño --</option>
@@ -40,5 +44,6 @@
     <footer>
         <p>Curso FontEnd con HTML, CSS y Js </p>
     </footer>
+    <script src="./js/app.js"></script>
 </body>
 </html>
