--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="./img/logo.png" alt="Logo mastermind">
     </header>
     <main>
-        <form action="#">
+        <form action="juego.html" id="formEntrada">
             <div class="itemform">
                 <label for="nick">Ingresa Tu nick</label>
                 <input type="text" name="nick" value="@" id="nicka" readonly>
@@ -31,14 +31,14 @@
             <div class="itemform">
                 <label for="tamano">tamaño del juego</label>
                 <select name="tamano" id="tamano">
-                    <option value="">-- Porfavor Elige un tamaño --</option>
+                    <option value="0">-- Porfavor Elige un tamaño --</option>
                     <option value="1">4x4</option>
                     <option value="2">5x5</option>
                     <option value="3">6x6</option>
                 </select>
             </div>
             <div class="itemform">
-                <input type="submit" value="Jugar">
+                <input type="submit" value="Jugar" id="btn">
             </div> 
         </form>
     </main>
