--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
         <img src="./img/logo.png" alt="Logo mastermind">
     </header>
     <main>
+        <div>
+            <p id="error"></p>
+        </div>
         <form action="juego.html" id="formEntrada">
             <div class="itemform">
-                <label for="nick">Ingresa Tu nick</label>
+                <label for="nick">Ingresa Tu nick*</label>
                 <input type="text" name="nick" value="@" id="nicka" readonly>
                 <input type="text" name="nick" id="nick">
             </div>
@@ -29,7 +32,7 @@
                 <input type="email" name="email" id="email">
             </div>
             <div class="itemform">
-                <label for="tamano">tamaño del juego</label>
+                <label for="tamano">tamaño del juego*</label>
                 <select name="tamano" id="tamano">
                     <option value="0">-- Porfavor Elige un tamaño --</option>
                     <option value="1">4x4</option>
