datos en sessionStorage

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <footer>
         <p>Curso FontEnd con HTML, CSS y Js </p>
     </footer>
+    <script src="./js/datosusurio.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
