--- a/juego.html
+++ b/juego.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     juego Html
+    <script src="./js/datosusurio.js"></script>
+    <script src="./js/juego.js"></script>
 </body>
 </html>
