--- a/index.html
+++ b/index.html
@@ -40,6 +40,38 @@
                     <option value="3">6x6</option>
                 </select>
             </div>
+        </div>
+        <div class="itemform">
+            <div id="avatar">
+                <label for="avatar">avatar</label>
+                <div id="avatarContainer">
+                    <img src="./img/avatar1.png" alt="" id="avatarImg">
+                </div>
+            </div>
+            <div id="avatargrid">
+                <div class="avatarItem">
+                    <img src="./img/avatar1.png" class="avatarImgItem" alt="" width="35" draggable="true">
+                </div>
+                <div class="avatarItem">
+                    <img src="./img/avatar2.png" class="avatarImgItem" alt="" width="35" draggable="true">
+                </div>
+                <div class="avatarItem">
+                    <img src="./img/avatar3.png" class="avatarImgItem" alt="" width="35" draggable="true">
+                </div>
+                <div class="avatarItem">
+                    <img src="./img/avatar4.png" class="avatarImgItem" alt="" width="35" draggable="true">
+                </div>
+                <div class="avatarItem">
+                    <img src="./img/avatar5.png" class="avatarImgItem" alt="" width="35" draggable="true">
+                </div>
+                <div class="avatarItem">
+                    <img src="./img/avatar6.png" class="avatarImgItem" alt="" width="35" draggable="true">
+                </div>
+            </div>
+        </div>
+        <div class="itemform">
+            <p>* Obligatorio</p>
+        </div>
             <div class="itemform">
                 <input type="submit" value="Jugar" id="btn">
             </div> 
